[package]
name = "amazeing"
version = "0.1.0"
authors = ["Kalabuk Dmitriy <kalabukdima@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.3.0"
itertools = "0.8.0"
itertools-num = "0.1.3"
disjoint-sets = "0.4.2"
rand = "0.6.5"
dirs = "2.0.2"
serde = "1.0.101"
ron = "0.5.1"
sdl2 = "0.32.1"

[features]
bench = []
